@@ -1196,6 +1196,10 @@
 	'S_EVENTS_DATE_FORMAT'=>		'd M Y H:i:s',
 	'S_EVENTS_DISCOVERY_TIME_FORMAT'=>	'Y.M.d H:i:s',
 	'S_EVENTS_ACTION_TIME_FORMAT'=>		'Y.M.d H:i:s',
+	'S_UP_BIG'=>		'UP',
+	'S_DOWN_BIG'=>		'DOWN',
+	'S_DISCOVERED_BIG'=>		'DISCOVERED',
+	'S_LOST_BIG'=>		'LOST',
 
 //	events.inc.php
 	'S_EVENTS_EVENT_DETAILS_DATE_FORMAT'=>			'Y.M.d H:i:s',
@@ -1555,6 +1559,7 @@
 	'S_DIMENSION_COLS_ROWS'=>		'Dimension (cols x rows)',
 	'S_DELETE_SELECTED_SLIDESHOWS_Q'=>	'Delete selected slideshows?',
 
+	'S_SLIDESHOW_MUST_CONTAIN_SLIDES' => 'Slideshow must contain slides',
 	'S_SLIDESHOWS'=>				'Slide shows',
 	'S_SLIDESHOW'=>					'Slide show',
 	'S_CONFIGURATION_OF_SLIDESHOWS_BIG'=>	'CONFIGURATION OF SLIDE SHOWS',
