@@ -501,17 +501,17 @@ div.sla_red{
 }
 
 div.icon_sortup{
-	height: 10px;
-	width: 10px;
-	background-image: url('../images/general/sort_up.png');
+	height: 16px;
+	width: 19px;
+	background-image: url('../images/general/sort_up.gif');
 	background-repeat:no-repeat;
 	cursor: pointer;
 }
 
 div.icon_sortdown{
-	height: 10px;
-	width: 10px;
-	background-image: url('../images/general/sort_down.png');
+	height: 16px;
+	width: 19px;
+	background-image: url('../images/general/sort_down.gif');
 	background-repeat:no-repeat;
 	cursor: pointer;
 }
