@@ -1,5 +1,16 @@
 Changes for 1.8.3rc3
 
+ - [ZBX-2671] fixed detection of various system headers during ./configure (asaveljevs)
+ - [ZBX-2800] fixed undefined variable if update trigger with incorrect function (Vedmak)
+ - [ZBX-2789] forbid active agent items to have 0 interval (Vedmak)
+ - [ZBX-2794] fixed sorting in configuration web (Vedmak)
+ - [ZBX-2792] fixed status sorting in maintenances (Vedmak)
+ - [ZBX-2726] fixed statuses for discovery events (Vedmak)
+ - [ZBX-2785] creation of empty slideshows prohibited (Vedmak)
+ - [ZBX-2791] fixed host menu in "top 100 triggers" in ie7 (Vedmak)
+ - [ZBX-2790] fixed maintenance times reset while configure maintenance (Vedmak)
+ - [ZBX-2773] changed buttons css for DO theme (Vedmak)
+ - [ZBX-2777] fixed map labels when "status only" option is set (Vedmak)
  - [ZBX-2775] updated Brazilian Portuguese translation; thanks to Murilo Moreira de Oliveira (Vedmak)
  - [DEV-468] improved theme coloring in IE (Aly)
 
